Fixed issue on mobile

--- a/src/app/core/about/about.component.css
+++ b/src/app/core/about/about.component.css
@@ -150,6 +150,7 @@
       flex: 0;
       min-height: 300px;
       width: 100%;
+      object-fit: cover;
   }
   
   .about-tab-text {
